--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "@types/react-router-dom": "^5.1.6",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "lint-staged": "^10.4.0"
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0"
   }
 }
