--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
+    "process-env": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-resize-observer": "^1.1.1",
